--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>git learning</title>
 </head>
 <body>
-  <h1>sujay</h1>
-  <img src="https://plus.unsplash.com/premium_photo-1674675646719-c6c0445dcba1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHx8" alt="" srcset="">
+ <header>
+  <nav>
+    <a href="#">Home 
+      <ul class="ul">
+        <li>jdk</li>
+        <li>hf</li>
+        <li>idfoi</li>
+        <li>jkdj</li>
+      </ul>
+    </a>
+    <a href="#">About 
+      <ul class="ul">
+        <li>jdk</li>
+        <li>hf</li>
+        <li>idfoi</li>
+        <li>jkdj</li>
+      </ul>
+    </a>
+    <a href="#">parameter 
+      <div class="ul">
+        <ul>
+          <li>jdk</li>
+          <li>hf</li>
+          <li>idfoi</li>
+          <li>jkdj</li>
+        </ul>
+      </div>
+
+    </a>
+    <a href="#">jkhskdjf 
+      <ul class="ul">
+        <li>jdk</li>
+        <li>hf</li>
+        <li>idfoi</li>
+        <li>jkdj</li>
+      </ul>
+    </a>
+    <a href="#">;ssjvlk 
+      <ul class="ul">
+        <li>jdk</li>
+        <li>hf</li>
+        <li>idfoi</li>
+        <li>jkdj</li>
+      </ul>
+    </a>
+  </nav>
+ </header>
+
+ <main>
+  <div class="div">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed deleniti, aliquam, ipsum doloremque est nesciunt modi autem, rem consequatur fugiat facilis enim. Id tempore eligendi debitis. Non officiis commodi temporibus?
+  </div>
+ </main>
 </body>
 </html>
